[gd_scene load_steps=5 format=3 uid="uid://bh2vbtqppehd7"]

[ext_resource type="Script" path="res://scripts/player_3d.gd" id="1_6sx0b"]
[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://assets/models/sophia/sophia_skin.tscn" id="2_uhobi"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g4tdi"]
height = 1.8
radius = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t2a7i"]
albedo_color = Color(1, 0.152941, 1, 1)

[node name="Game" type="Node3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
use_collision = true
size = Vector3(5, 2, 6)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.683013, 0.183013, 0, 0.258819, 0.965926, -0.707107, -0.683013, 0.183013, 0, 3, 2)
light_energy = 7.552
shadow_enabled = true

[node name="Player3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_6sx0b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -0.2)
shape = SubResource("CylinderShape3D_g4tdi")

[node name="SophiaSkin" parent="Player3D" instance=ExtResource("2_uhobi")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CameraAnchor" type="Node3D" parent="Player3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)

[node name="Camera3D" type="Camera3D" parent="Player3D/CameraAnchor"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2.6, 8)

[node name="DebugLookAtPoint" type="Marker3D" parent="."]
unique_name_in_owner = true

[node name="CSGSphere3D" type="CSGSphere3D" parent="DebugLookAtPoint"]
material_override = SubResource("StandardMaterial3D_t2a7i")
radius = 0.2
